--- a/includes/before-body-end.html
+++ b/includes/before-body-end.html
@@ -1,5 +1,5 @@
-<script>
+<!--script>
   document.addEventListener('DOMContentLoaded', function() {
      document.querySelectorAll("[data-action]")[0].dispatchEvent(new MouseEvent("click", {ctrlKey: true, bubbles: true}));
   }, false);
-</script>
+</script-->
