--- a/includes/before-body-end.html
+++ b/includes/before-body-end.html
@@ -1,5 +1,9 @@
-<!--script>
+<script>
   document.addEventListener('DOMContentLoaded', function() {
-     document.querySelectorAll("[data-action]")[0].dispatchEvent(new MouseEvent("click", {ctrlKey: true, bubbles: true}));
+    const stateString = localStorage.getItem("closedAccordionIds");
+    try {
+      const parsed = JSON.parse(stateString);
+      if (!parsed?.length) document.querySelectorAll("[data-action]")[0].dispatchEvent(new MouseEvent("click", {ctrlKey: true, bubbles: true}));
+    }
   }, false);
-</script-->
+</script>
